Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <title>Планер продуктивности · crock0dole</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- Иконка для рабочего стола iOS (положи рядом crock0dole-icon.png, 512x512) -->
+ <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <link rel="apple-touch-icon" href="crock0dole-icon.png" />
-  <style>
+  <link rel="icon" type="image/png" href="crock0dole-icon.png" />
+   <style>
     :root {
       --bg: #050509;
       --bg-elevated: #101018;
@@ -1294,3 +1295,4 @@
   </script>
 </body>
 </html>
+
