--- a/index.html
+++ b/index.html
@@ -685,40 +685,49 @@
       color: var(--text-muted);
       opacity: 0.7;
     }
-    /* ===== АДАПТАЦИЯ ПОД ПЛАНШЕТ / ТЕЛЕФОН ===== */
+    /* ===== АГРЕССИВНАЯ МОБИЛЬНАЯ УПЛОТНЁНКА ===== */
 @media (max-width: 768px) {
   .app-shell {
-    padding: 8px 8px 16px;
+    padding: 4px 6px 12px;
   }
 
   .header {
     flex-direction: column;
     align-items: flex-start;
-    gap: 6px;
+    gap: 4px;
+    margin-bottom: 8px;
   }
 
   .header-caption {
     text-align: left;
-    font-size: 11px;
+    font-size: 10px;
+    max-width: 260px;
+    line-height: 1.3;
   }
 
   .panel {
-    padding: 10px 10px 10px;
+    padding: 8px 8px 8px;
     border-radius: 12px;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
+  }
+
+  .panel-header-row {
+    margin-bottom: 4px;
   }
 
   .panel-title {
-    font-size: 14px;
+    font-size: 13px;
   }
 
   .panel-subtitle {
-    font-size: 10px;
+    font-size: 9px;
   }
 
   .motto-row {
     flex-direction: column;
     align-items: flex-start;
+    gap: 4px;
+    margin-bottom: 6px;
   }
 
   .motto-input,
@@ -726,12 +735,21 @@
   .month-input {
     width: 100%;
     max-width: 100%;
+    font-size: 11px;
+    padding: 4px 8px;
   }
 
-  /* Вьюшка с таблицей — отдельный скролл, чтобы не растягивать всю страницу */
-  .grid-wrapper,
-  .top3-wrapper {
-    max-height: 60vh;
+  .month-label-row {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+    font-size: 10px;
+    margin-bottom: 6px;
+  }
+
+  /* Таблица месяца — чуть мельче и ниже по высоте */
+  .grid-wrapper {
+    max-height: 52vh;
     overflow-x: auto;
     overflow-y: auto;
   }
@@ -740,47 +758,70 @@
     font-size: 9px;
   }
 
+  .week-band-row th {
+    font-size: 9px;
+  }
+
   .habit-name-cell {
-    min-width: 160px;
+    min-width: 150px;
+    padding: 3px 4px;
+  }
+
+  .habit-input {
+    font-size: 10px;
+    padding: 3px 6px;
   }
 
   .day-cell {
-    min-width: 24px;
-    height: 24px;
+    min-width: 22px;
+    height: 20px;
   }
 
-  .chart-container {
-    height: 200px;
+  /* Блок прогресса под сеткой — меньше отступов и шрифтов */
+  .side-progress {
+    padding: 8px;
+  }
+
+  .side-title {
+    font-size: 11px;
+  }
+
+  .side-main-number {
+    font-size: 18px;
+  }
+
+  .mini-bar-row {
+    font-size: 9px;
+    gap: 4px;
+  }
+
+  .mini-bar-label {
+    width: 26px;
+  }
+
+  .mini-bar-pct {
+    width: 70px; /* чтобы влезали длинные названия справа */
+    text-align: left;
+  }
+
+  .controls-row {
+    margin-top: 6px;
+    justify-content: space-between;
+  }
+
+  button {
+    padding: 4px 10px;
+    font-size: 10px;
   }
 
   .weekly-layout,
   .top-main-layout {
     grid-template-columns: minmax(0, 1fr);
-  }
-}
-
-@media (max-width: 540px) {
-  .brand-logo {
-    width: 38px;
-    height: 38px;
-    border-radius: 14px;
-    font-size: 14px;
+    gap: 8px;
   }
 
-  .brand-text-title {
-    font-size: 16px;
-  }
-
-  .brand-text-sub {
-    font-size: 10px;
-  }
-
-  .side-progress {
-    padding: 8px;
-  }
-
-  .side-main-number {
-    font-size: 18px;
+  .chart-container {
+    height: 190px;
   }
 
   .week-legend {
@@ -791,12 +832,30 @@
     font-size: 10px;
   }
 
-  /* прогресс-блоки по неделям в две колонки, чтобы не были слишком мелкими */
   .final-bars {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 4px;
   }
 
-  /* топ-3 задачи — тоже отдельный скролл, но крупнее шрифт */
+  .donut-box {
+    padding: 8px;
+  }
+
+  .donut-title {
+    font-size: 11px;
+  }
+
+  .donut-numbers {
+    font-size: 10px;
+  }
+
+  /* Топ-3 задачи — отдельный скролл, немного мельче */
+  .top3-wrapper {
+    max-height: 50vh;
+    overflow-x: auto;
+    overflow-y: auto;
+  }
+
   table.top3-grid {
     min-width: 720px;
     font-size: 10px;
@@ -804,6 +863,34 @@
 
   .top3-input {
     font-size: 10px;
+    padding: 3px 5px;
+  }
+
+  .top3-checkbox {
+    width: 14px;
+    height: 14px;
+  }
+
+  .footer {
+    font-size: 9px;
+    margin-top: 8px;
+  }
+}
+
+@media (max-width: 540px) {
+  .brand-logo {
+    width: 34px;
+    height: 34px;
+    border-radius: 12px;
+    font-size: 13px;
+  }
+
+  .brand-text-title {
+    font-size: 15px;
+  }
+
+  .brand-text-sub {
+    font-size: 9px;
   }
 }
 
